# aoc

./: Cargo.toml
.github/workflows/: general.yaml
crates/aoc_24/: Cargo.toml
crates/aoc_24/src/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_1.rs  lib.rs
crates/coordinates/: Cargo.toml
crates/coordinates/src/: lib.rs
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs
